# amd_adrenalin_control

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: release-pyinstaller.yml
.github/workflows/scripts/: generate_version_info.py
src/amd_adrenalin_control/: __init__.py  _actions.py  _context_menus.py  _report_helpers.py  _stylesheet.py  _tree_helpers.py  constants.py  dialogs.py  main_window.py  process_ops.py  refresh_snapshot.py  uac.py  ui_helpers.py
src/restart_amd_adrenaline/: __init__.py  _report_helpers.py  _stylesheet.py  constants.py  dialogs.py  main_window.py  process_ops.py  refresh_snapshot.py  uac.py  ui_helpers.py
