[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amd-adrenalin-control"
dynamic = ["version"]
description = "PyQt6 desktop utility for AMD Adrenalin Control to start, stop, restart, and monitor AMD Adrenalin processes on Windows."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.13"
dependencies = [
    "psutil",
    "PyQt6",
    "types-psutil",
]

[project.urls]
Homepage = "https://github.com/BUZZARDGTA/amd_adrenalin_control"
Issues = "https://github.com/BUZZARDGTA/amd_adrenalin_control/issues"

[project.scripts]
amd-adrenalin-control = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.dynamic]
version = {attr = "amd_adrenalin_control.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.master]
extension-pkg-allow-list = ["PyQt6"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
".github/**/generate_version_info.py" = ["INP001", "T201"]
